# optyx

./: AGENTS.md  CONTRIBUTING.md  RULES.md  STYLE.md  TODO.md  pyproject.toml
.github/workflows/: main.yml
docs/notebooks/: bose_hubbard.ipynb  bosonic-vqe-2.ipynb  readme_example.ipynb
optyx/: __init__.py  classical.py  photonic.py  qubits.py
optyx/core/: backends.py  channel.py  control.py  diagram.py  path.py  zw.py  zx.py
optyx/utils/: misc.py  perceval_conversion.py
test/: test_backends.py  test_channel.py  test_classical.py  test_conjugation.py  test_feed_forward.py  test_grad.py  test_path.py  test_perceval.py  test_qubit.py  test_zw.py  test_zw_2_circuit.py  test_zw_truncated_arrays.py  test_zx.py  test_zx_arrays.py
